--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
